# libcobalt

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md
examples/: CMakeLists.txt  decode.c  encode.c
include/: cobalt.h
map/: CMakeLists.txt  README.md  construct_guidetable.c  construct_map.c  uint32_array_to_c.c
plaintext/: CMakeLists.txt  README.md  convert_to_c.py  newline_to_null.py  sort_wordlist.c  uncomment.py
src/: blocksize.c  findword.c  sentence.c  sentence.h  splitstring.c  splitstring.h
tests/: charstatus_asciimap.c  encode_decode.c  getencodedlength.c  lengthprediction.c  splitstr_cmdline.c  splitstringtest.c
util/: CMakeLists.txt  c_hexdump.c
